# vortex-gripper

./: README.md
gripper_controller/: CMakeLists.txt  package.xml
gripper_controller/config/: gripper_controller_config.yaml
gripper_controller/include/gripper_controller/: gripper_controller_driver.hpp  gripper_controller_ros.hpp
gripper_controller/launch/: gripper_controller.launch.py
gripper_controller/resources/: notes.txt
gripper_controller/src/: gripper_controller_driver.cpp  gripper_controller_node.cpp  gripper_controller_ros.cpp
gripper_description/: CMakeLists.txt  package.xml
gripper_description/launch/: demo.launch.py
gripper_description/urdf/: gripper.urdf.xacro
gripper_interface/: CMakeLists.txt  package.xml
gripper_interface/config/: params.yaml
gripper_interface/include/: canfd.h
gripper_interface/include/gripper_interface/: gripper_interface_driver.hpp  gripper_interface_node.hpp  gripper_interface_ros.hpp
gripper_interface/launch/: gripper_interface.launch.py
gripper_interface/src/: canfd.c  gripper_interface_driver.cpp  gripper_interface_node.cpp  gripper_interface_ros.cpp
joy_to_pwm/: CMakeLists.txt  package.xml
joy_to_pwm/include/joy_to_pwm/: gripper_interface.hpp  gripper_interface_driver.hpp
joy_to_pwm/src/: gripper_interface.cpp  gripper_interface_driver.cpp
scripts/: ci_install_dependencies.sh
